src/metrics/snapshots/big_code_analysis__metrics__abc__tests__javascript_complex_function_abc.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 7,
  "branches": 2,
  "conditions": 8,
  "magnitude": 10.816653826391969,
  "assignments_average": 3.5,
  "branches_average": 1.0,
  "conditions_average": 4.0,
  "assignments_min": 0,
  "assignments_max": 7,
  "branches_min": 0,
  "branches_max": 2,
  "conditions_min": 0,
  "conditions_max": 8
}
