src/metrics/snapshots/big_code_analysis__metrics__abc__tests__javascript_else_ternary_case_default_try_catch.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 1,
  "branches": 0,
  "conditions": 7,
  "magnitude": 7.0710678118654755,
  "value": 0.0,
  "assignments_average": 0.5,
  "branches_average": 0.0,
  "conditions_average": 3.5,
  "assignments_min": 0,
  "assignments_max": 1,
  "branches_min": 0,
  "branches_max": 0,
  "conditions_min": 0,
  "conditions_max": 7
}
