src/metrics/snapshots/big_code_analysis__metrics__abc__tests__javascript_plain_and_compound_assignments_count.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 4.0,
  "branches": 0.0,
  "conditions": 0.0,
  "magnitude": 4.0,
  "assignments_average": 2.0,
  "branches_average": 0.0,
  "conditions_average": 0.0,
  "assignments_min": 0.0,
  "assignments_max": 4.0,
  "branches_min": 0.0,
  "branches_max": 0.0,
  "conditions_min": 0.0,
  "conditions_max": 0.0
}
