src/metrics/snapshots/big_code_analysis__metrics__abc__tests__kotlin_catch_block_counts.snap
---
source: src/metrics/abc.rs
expression: metric.abc
---
{
  "assignments": 0,
  "branches": 2,
  "conditions": 2,
  "magnitude": 2.8284271247461903,
  "assignments_average": 0.0,
  "branches_average": 1.0,
  "conditions_average": 1.0,
  "assignments_min": 0,
  "assignments_max": 0,
  "branches_min": 0,
  "branches_max": 2,
  "conditions_min": 0,
  "conditions_max": 2
}
